# Qt5

./: .gitignore  README.md
login/: CMakeLists.txt  KcUtility.h  QdKcLogin.cpp  QdKcLogin.h  QdKcLogin.ui  QmKcMain.cpp  QmKcMain.h  QmKcMain.ui  README.md  black.css  compile.bat  compile.sh  login.qrc  main.cpp  qt.conf  stringbuffer.c  stringbuffer.h
